cmake_minimum_required(VERSION 3.13)
project(port-calc LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
find_package( CURL REQUIRED)
set(portcalc_VERSION_MAJOR 1)
set(portcalc_VERSION_MINOR 0)
set(portcalc_VERSION_REVISION 0)
configure_file(${PROJECT_SOURCE_DIR}/src/version.h.in ${PROJECT_BINARY_DIR}/src/version.h)
include_directories(${CURL_INCLUDE_DIR})
add_executable(port-calc src/Main.cpp src/InfoContainer.cpp)
target_link_libraries( port-calc CURL::libcurl )
target_include_directories(port-calc PUBLIC "${PROJECT_BINARY_DIR}/src/")